[package]
name = "cmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.9"
clap = { version = "4.0.29", features = ["derive"] }
dablenutil = { version = "0.2.0", features = ["logging", "tokio"] }
dotenv = "0.15.0"
futures = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
num_cpus = "1.14.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
