[package]
name = "cmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.9"
clap = { version = "4.1", features = ["derive"] }
dablenutil = { version = "0.3.2", features = ["logging", "tokio"] }
dotenv = "0.15.0"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.17"
num_cpus = "1.15"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
